--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        #~ - name: Setup upterm session
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
+
     - name: Scrape delhi beds dashboard
       run: |
         python scraper.py
