--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         #~ - name: Setup upterm session
-    #~ - name: Setup upterm session
-      #~ uses: lhotari/action-upterm@v1
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
 
     - name: Archive Mumbai dashboard
       run: |
