--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,5 +46,15 @@ jobs:
         git config --global user.name 'Your Name'
         git config --global user.email 'your-username@users.noreply.github.com'
         git add mumbai_dashboards/*pdf
-        git commit -am "Automated report"
+        git commit -am "Automated report: adding raw bulletin for today"
+        git push
+    - name: Automatically parse todays dashboard
+      run: |
+        python scraper.py parse_today_bulletin
+    - name: Commit modified data.csv
+      run: |
+        git config --global user.name 'Your Name'
+        git config --global user.email 'your-username@users.noreply.github.com'
+        git add .
+        git commit -am "Automated report: Adding parsed csv data for today"
         git push
