--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Archive Mumbai dashboard
       run: |
         python scraper.py
-    - name: Commit modified data.csv
+    - name: Commit dashboard pdf
       run: |
         git config --global user.name 'Your Name'
         git config --global user.email 'your-username@users.noreply.github.com'
